workaround for transition z-index issue (bug 822288)

--- a/media/css/mkt/tile.less
+++ b/media/css/mkt/tile.less
@@ -369,7 +369,7 @@
         img {
             -moz-user-select: none;
             width: 180px;
-            max-height: 270px;
+            max-height: 215px;
         }
     }
 }
